Fix image sizing on mobile

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,10 @@ body {
         left: 0; 
     }
 
+    img { 
+        max-width: 90vw; 
+    }
+
     .bar-container {
         content-visibility: hidden;
     }
